PN-11452 Modificati test + aggiunta nuovi test